@@ -1,3 +1,4 @@
+* FEA#7439 Possibilité de débrancher les surprimes / exclusions par garantie
 * BUG#5664 Correction des vérifications de données complémentaires sur les garanties et les éléments couverts
 * FEA#7024 Ajout de modéles de courriers par défaut pour "Certificat d'adhésion" - "Echéancier" -"Brouillard" - "Demande mandat SEPA"
 * BUG#7132 Migration de la fonction d'attribution du souscripteur du contrat en tant qu'élément couvert depuis le module "contract_life_process"
